--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/metabraid/inacajon/issues"
   },
-  "homepage": "https://github.com/metabraid/inacajon#readme"
+  "homepage": "https://github.com/metabraid/inacajon#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
