--- a/package.json
+++ b/package.json
@@ -20,7 +20,5 @@
     "url": "https://github.com/metabraid/inacajon/issues"
   },
   "homepage": "https://github.com/metabraid/inacajon#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+  "dependencies": {}
 }
